@@ -1,6 +1,8 @@
 2006-12-05 Kimmo
  PATCH: [ 1608705 ] Manual: Fix indexterms in Folder Compare
   Manual: Compare_dirs.xml
+ PATCH: [ 1608708 ] Manual: Fix indexterms in File Compare
+  Manual: Compare_files.xml
 
 2006-12-04 Kimmo
  PATCH: [ 1608003 ] Manual: Fix indexterm position in Quick Start
